[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "poliwrap"
version = "0.0.5"
description = "A lightweight, framework-agnostic abstraction for reinforcement learning policy inference."
authors = [
  { name = "Miguel Villa Floran", email = "miguel.villafloran@gmail.com" },
  { name = "Jing Cao", email = "jcao0715@gmail.com" },
]
requires-python = ">=3.10,<3.14"
keywords = ["reinforcement-learning", "inference", "policy"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
readme = "README.md"
license = { file = "LICENSE" }

dependencies = ["numpy>=2.2.6"]

[project.optional-dependencies]
onnx = ["onnxruntime>=1.16.0"]
torch = ["torch>=2.10.0"]
all = ["poliwrap[onnx]", "poliwrap[torch]"]

[dependency-groups]
dev = ["pre-commit"]
