[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "poliwrap"
version = "0.0.8"
description = "A lightweight, framework-agnostic abstraction for reinforcement learning policy inference."
authors = [
  { name = "Miguel Villa Floran", email = "miguel.villafloran@gmail.com" },
  { name = "Jing Cao", email = "jcao0715@gmail.com" },
]
requires-python = ">=3.10,<3.14"
keywords = ["reinforcement-learning", "inference", "policy"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
readme = "README.md"
license = { file = "LICENSE" }

dependencies = ["numpy"]

[project.optional-dependencies]
jax = ["jax", "orbax-checkpoint"]
onnx = ["onnxruntime"]
onnx-gpu = ["onnxruntime-gpu"]
torch = ["torch", "rsl-rl-lib"]
all = ["poliwrap[onnx]", "poliwrap[torch]", "poliwrap[jax]"]

[tool.uv]
conflicts = [[{ extra = "onnx" }, { extra = "onnx-gpu" }]]

[dependency-groups]
dev = ["pre-commit"]
